{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 8,
  "lineage": "fd240e0a-f14a-06df-9094-6dbc6a2359d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "each": "list",
      "provider": "provider.aws.virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:807624821827:instance/i-01d8f9e141c5cfd39",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01d8f9e141c5cfd39",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-03778f400d1be05ab",
            "private_dns": "ip-172-31-93-186.ec2.internal",
            "private_ip": "172.31.93.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0485fc67ad3fae2da",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-378d9c19",
            "tags": {
              "Name": "TF-virginia-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ee46544ec13405c6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_virginia"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:807624821827:instance/i-0985fc11a2090bbc5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0985fc11a2090bbc5",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c69e18d7bfcbda90",
            "private_dns": "ip-172-31-86-233.ec2.internal",
            "private_ip": "172.31.86.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f718fcb0c94c3202",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-378d9c19",
            "tags": {
              "Name": "TF-virginia-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ee46544ec13405c6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server2",
      "each": "list",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dacb0c129b49f529",
            "arn": "arn:aws:ec2:us-east-2:807624821827:instance/i-05d2fa1bdf0c52a8f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-05d2fa1bdf0c52a8f",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-04ed94b2d3fa8f890",
            "private_dns": "ip-172-31-33-160.us-east-2.compute.internal",
            "private_ip": "172.31.33.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07fe787886e912df8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e78705ab",
            "tags": {
              "Name": "TF-ohio-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c5a2d87be8187870"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_ohio"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dacb0c129b49f529",
            "arn": "arn:aws:ec2:us-east-2:807624821827:instance/i-0f2bb12573ff69cda",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f2bb12573ff69cda",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f5ac92a7bf8c5274",
            "private_dns": "ip-172-31-36-89.us-east-2.compute.internal",
            "private_ip": "172.31.36.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c6e7c07a8cca6428",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e78705ab",
            "tags": {
              "Name": "TF-ohio-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c5a2d87be8187870"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_ohio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_ohio",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:807624821827:security-group/sg-0c5a2d87be8187870",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-0c5a2d87be8187870",
            "ingress": [
              {
                "cidr_blocks": [
                  "179.184.65.86/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "807624821827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-4924e122"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_virginia",
      "provider": "provider.aws.virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807624821827:security-group/sg-0ee46544ec13405c6",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-0ee46544ec13405c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "179.184.65.86/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "807624821827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-e24e6898"
          }
        }
      ]
    }
  ]
}